# rafacost-comfy

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
nodes/: dreamomni2.py
web/assets/js/: dreamomni2_output.js  utils.js
workflows/: DreamOmni2.json  DreamOmni2_Four_Images_Edit.json  dreamomni2-gguf.json
