[project]
name = "rafacost-comfy"
description = ""
version = "0.4.3"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["﻿torch>=2.2.0", "numpy", "Pillow", "scikit-build-core", "llama-cpp-python>=0.3.16"]

[project.urls]
Repository = "https://github.com/rafacost/rafacost-comfy"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/rafacost/rafacost-comfy/wiki"
"Bug Tracker" = "https://github.com/rafacost/rafacost-comfy/issues"

[tool.comfy]
PublisherId = "rafacost"
DisplayName = "rafacost-comfy"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

